--- a/handler.html
+++ b/handler.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="controller.manifest">
+<html manifest="controller.appcache">
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
@@ -20,7 +20,7 @@
 
 </head>
 
-<body onload="onLoad();" id="kAppBody" url="http://purlieu.igh.me/">
+<body onload="onLoad();" id="kAppBody" url="http://purlieu2.igh.me/">
 
 <script type="text/javascript" src="js/jquery-1.10.1.min.js"></script>
 <script src="js/jquery.validate.min.js" type="text/javascript"></script>
